CHANGES IN VERSION 2.0.10
-------------------------
    o Add argument for sample ordering in plotTiTv. Issue: #330

CHANGES IN VERSION 2.0.05
-------------------------
USER-LEVEL IMPROVEMENT
    o merge_mafs - Merge multiple MAF objects, files. Issue: #329
    o Add more examples for oncoplot customization. Issue: #310
    o CoOncoplot - align gene names. Issue: #308
    o Added keepGeneOrder argument to plotVaf. Issue: #305
    o Added sampleOrder argument to gisticOncoPlot. Issue: #302

BUG FIX
    o Fix oncoplot removeNonMutated Error #325
    o SomatinInteractions - Do not ignore samples with no nonsyn variants. Issue: #318
    o Do not convert spaces to underscores while parsing annotations. Issue: #314
    o Fix errors in bubbleplot when the data contains no labels. Issue: #313
    o Fix data.table melt value name in plotVaf. Issue: #311
    o Fix colors for NAs in oncoplot legend. Issue: #309

CHANGES IN VERSION 2.0.0
-------------------------
SIGNIFICANT USER-LEVEL IMPROVEMENT
    o Oncoplot, oncostrip and coOncoplot code has been migrated from ComplexHeatmap to base graphics. Default values for some arguments have been changed.
    o Changed default value for mafObj argument in subsetMaf to TRUE. Issue: #235
    o All ggplots are migrated to base graphics for consistancy
    o TCGA mutations per sample used for tcgaCompare are updated to more stable MC3 cohort from deprecated broad firehose.

IMPROVEMENTS:
    o tcgaCompare now accpets comparing against user specifc cohorts. Issue: #229
    o Add missing genes and samples to oncoplot even when they are not altered. Issue: #254
    o Added MTRNR2L8 protein structure to pfam database. Issue: #255
    o Added addtionalFeature argument to oncoplots. Issue: #270
    o Added log scale option for summary and oncoplots. Issue: #273
    o Made protein domain db compatible with R version < 3.5 Issue: #276
    o Added draw `draw_titv`, and `exprsTbl` argument to oncoplot