@@ -22,7 +22,6 @@ export(mafCompare)
 export(mafSummary)
 export(mafSurvival)
 export(math.score)
-export(merge_mafs)
 export(mutCountMatrix)
 export(oncodrive)
 export(oncoplot)
