@@ -4,7 +4,6 @@
 #' @param verbose Default TRUE
 #' @param ... additional arguments passed \code{\link{read.maf}}
 #' @return \code{\link{MAF}} object
-#' @export
 #'
 merge_mafs = function(mafs, verbose = TRUE, ...){
 
